--- a/application-dev.properties
+++ b/application-dev.properties
@@ -9,3 +9,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
