--- a/company-dev.yml
+++ b/company-dev.yml
@@ -11,3 +11,10 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database=POSTGRESQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+resilience4j.circuitbreaker.instances.company-service.register-health-indicator=true
+resilience4j.circuitbreaker.instances.company-service.sliding-window-size=5
+resilience4j.circuitbreaker.instances.company-service.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.company-service.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.company-service.wait-duration-in-open-state=10s
+resilience4j.circuitbreaker.instances.company-service.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.company-service.event-consumer-buffer-size=10
