--- a/notification-dev.properties
+++ b/notification-dev.properties
@@ -1,1 +1,9 @@
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spring.application.name=notification-service
+spring.kafka.bootstrap-servers=localhost:9093
+spring.kafka.consumer.group-id=notification-service
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
