--- a/company-dev.yml
+++ b/company-dev.yml
@@ -19,5 +19,5 @@ resilience4j.circuitbreaker.instances.company-service.wait-duration-in-open-stat
 resilience4j.circuitbreaker.instances.company-service.permitted-number-of-calls-in-half-open-state=3
 resilience4j.circuitbreaker.instances.company-service.event-consumer-buffer-size=10
 bootstrap.servers=localhost:9092
-key.serializer=org.apache.kafka.common.serialization.StringSerializer
-value.serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
