--- a/company-dev.yml
+++ b/company-dev.yml
@@ -18,6 +18,6 @@ resilience4j.circuitbreaker.instances.company-service.failure-rate-threshold=5
 resilience4j.circuitbreaker.instances.company-service.wait-duration-in-open-state=10s
 resilience4j.circuitbreaker.instances.company-service.permitted-number-of-calls-in-half-open-state=3
 resilience4j.circuitbreaker.instances.company-service.event-consumer-buffer-size=10
-bootstrap.servers=localhost:9092
+spring.kafka.bootstrap.servers=localhost:9092
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
